# r2x-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  release-plz.toml
.github/: build-setup.yml
.github/actions/build-python-shim/: action.yml
.github/workflows/: build-python-shims.yml  build.yml  python-shim.yml  release.yml
crates/r2x-ast/: Cargo.toml
crates/r2x-ast/src/: decorator_scanner.rs  lib.rs
crates/r2x-cli/: Cargo.toml
crates/r2x-cli/src/: common.rs  errors.rs  help.rs  main.rs  package_verification.rs  pipeline_config.rs
crates/r2x-cli/tests/: integration.rs
crates/r2x-config/: Cargo.toml
crates/r2x-config/src/: lib.rs
crates/r2x-manifest/: Cargo.toml
crates/r2x-manifest/src/: lib.rs  manifest.rs  manifest_writer.rs  package_discovery.rs  runtime.rs  types.rs
crates/r2x-python/: Cargo.toml  build.rs
crates/r2x-python/src/: initialization.rs  lib.rs  package_loader.rs  utils.rs
scripts/: modify_installer.py  prepare_python_shim.sh  update_checksums.py
src/: config_manager.rs  errors.rs  help.rs  lib.rs  logger.rs  main.rs  package_verification.rs  pipeline_config.rs  plugin_cache.rs  plugin_manifest.rs
src/commands/: cache.rs  config.rs  init.rs  mod.rs  python.rs  run.rs
src/plugins/: clean.rs  config.rs  discovery.rs  install.rs  list.rs  mod.rs  package_resolver.rs  package_spec.rs  plugin_parser.rs  remove.rs  sync.rs  utils.rs
src/python_bridge/: initialization.rs  manifest_builder.rs  mod.rs  package_loader.rs  plugin_invoker.rs
tests/tests/: test_plugin_package_integration.rs
(+46 files in other folders)
