[package]
name = "r2x"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
serde_yaml = "0.9"
regex = "1.10"
thiserror = "1.0"
once_cell = "1.19"
chrono = "0.4"
indicatif = "0.17"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
